# stat_ts

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  core.py
src/stat_ts/: __init__.py
tests/: test_stat_ts.py
