# Минимальная современная конфигурация согласно PEP 621/517
# ---------------------------------------------------------
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stat-ts"                     # имя пакета (pip install stat-ts)
version = "0.1.0"
description = "Быстрый расчёт статистик торговых стратегий (Sharpe, Sortino, PF, DD...)."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"

authors = [
  {name = "Nikita Kartashev", email = "nikitakartashev1@gmail.com"},
]

keywords = ["trading", "statistics", "pnl", "quant", "backtest"]

dependencies = [
  "pandas>=1.5",
  "numpy>=1.24",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/kni85/stat_ts"
Source   = "https://github.com/kni85/stat_ts"
Issues   = "https://github.com/kni85/stat_ts/issues"

# Опциональные зависимости для разработки / CI
[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.3",
  "black>=24.3",      # форматтер
]
